# llama.cpp

./: CMakeLists.txt  RESOURCE_INSTRUMENTATION.md  debug_test.cpp  log-configuration.json  resource-tracking-integration.patch  test-inference.md  test_inference  test_inference_instrumentation.cpp  test_minimal_inference.cpp  test_resource_instrumentation.cpp  test_resource_trace.jsonl  test_sampling_methods.md  test_simple_inference.cpp  tracker-v1.md
include/: llama-resource-instrumentation.h
src/: CMakeLists.txt  llama-context.cpp  llama-graph.cpp  llama-instrumentation.cpp  llama-instrumentation.h  llama-model.cpp  llama-resource-instrumentation.cpp  llama-resource-instrumentation.h
tools/: CMakeLists.txt
tools/monitoring-frontend/: .env  package-lock.json  package.json
tools/monitoring-frontend/public/: index.html
tools/monitoring-frontend/src/: App.js  index.css
tools/monitoring-frontend/src/components/: LogViewer.js  ModelMetrics.js  PerformanceMetrics.js  PromptInput.js  PromptPlayground.js  SamplingChain.js  SessionEnd.js  SessionStart.js  SessionSummary.js  TokenAnimation.js  TokenVisualization.js
tools/monitoring-server/: CMakeLists.txt  CURL_EXAMPLES.md  README.md  logs.md  monitoring-server.cpp  test_sampling_methods.sh  test_server.py  test_server.sh
